Prevent hiding logo on small viewports

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -154,13 +154,3 @@
     }
   }
 }
-
-@media screen and (max-width: 375px) {
-  .header {
-    &-brand {
-      &.top-navigation--open {
-        display: none;
-      }
-    }
-  }
-}
